# dm-ref

./: .dockerignore  .gitignore  Cargo.toml  package-lock.json  package.json  quartz.config.ts  quartz.layout.ts
.github/workflows/: deploy.yml  push.yml
bot/: Cargo.toml  Dockerfile  build.rs  docker-compose.yml
bot/src/: main.rs
bot/terraform/: main.tf  outputs.tf  variables.tf
quartz/components/: DiscordBot.tsx  index.ts
scraper/: .gitignore
scraper/src/: main.rs
src/: main.rs
static/: privacy.md  terms.md
