[package]
name = "dm-ref-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
ed25519-dalek = { version = "2", features = ["std"] }
hex = "0.4"
log = "0.4"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
firestore = "0.44"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.22"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
